@@ -4156,119 +4156,4 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 
 	return $tblExpFooter;
 	}
-
-	function get_macros_widget($hostid = null){
-
-		if(isset($_REQUEST['form_refresh'])){
-			$macros = get_request('macros', array());
-		}
-		else if($hostid > 0){
-			$macros = API::UserMacro()->get(array('output' => API_OUTPUT_EXTEND, 'hostids' => $hostid));
-			order_result($macros, 'macro');
-		}
-		else if($hostid === null){
-			$macros = API::UserMacro()->get(array('output' => API_OUTPUT_EXTEND, 'globalmacro' => 1));
-			order_result($macros, 'macro');
-		}
-		else{
-			$macros = array();
-		}
-
-		if(empty($macros)){
-			$macros = array(0 => array('macro' => '', 'value' => ''));
-		}
-
-		$macros_tbl = new CTable(SPACE, 'formElementTable');
-		$macros_tbl->setAttribute('id', 'tbl_macros');
-		$macros_tbl->addRow(array(SPACE, S_MACRO, SPACE, S_VALUE));
-
-		insert_js('
-			function addMacroRow(){
-				if(typeof(addMacroRow.macro_count) == "undefined"){
-					addMacroRow.macro_count = '.count($macros).';
-				}
-
-				var tr = document.createElement("tr");
-				tr.className = (addMacroRow.macro_count % 2) ? "form_even_row" : "form_odd_row";
-
-				var td1 = document.createElement("td");
-				tr.appendChild(td1);
-
-				var cb = document.createElement("input");
-				cb.setAttribute("type", "checkbox");
-				cb.className = "checkbox";
-				td1.appendChild(cb);
-				td1.appendChild(document.createTextNode(" "));
-
-				var td2 = document.createElement("td");
-				tr.appendChild(td2);
-
-				var text1 = document.createElement("input");
-				text1.setAttribute("type", "text");
-				text1.setAttribute("name", "macros["+addMacroRow.macro_count+"][macro]");
-				text1.className = "input";
-				text1.setAttribute("size",30);
-				text1.setAttribute("placeholder","{$MACRO}");
-				td2.appendChild(text1);
-				td2.appendChild(document.createTextNode(" "));
-
-				var td3 = document.createElement("td");
-				tr.appendChild(td3);
-
-				var span = document.createElement("span");
-				span.innerHTML = "&rArr;";
-				span.setAttribute("style", "vertical-align:top;");
-				td3.appendChild(span);
-
-				var td4 = document.createElement("td");
-				tr.appendChild(td4);
-
-				var text2 = document.createElement("input");
-				text2.setAttribute("type", "text");
-				text2.setAttribute("placeholder","<'.S_VALUE.'>");
-				text2.setAttribute("name","macros["+addMacroRow.macro_count+"][value]");
-				text2.className = "input";
-				text2.setAttribute("size",40);
-				td4.appendChild(text2);
-
-				var sd = $("row_new_macro").insert({before : tr});
-				addMacroRow.macro_count++;
-			}
-		');
-
-		$macros = array_values($macros);
-		foreach($macros as $macroid => $macro){
-			$text1 = new CTextBox('macros['.$macroid.'][macro]', $macro['macro'], 30);
-			$text1->setAttribute('placeholder', '{$MACRO}');
-			$text2 = new CTextBox('macros['.$macroid.'][value]', $macro['value'], 40);
-			$text2->setAttribute('placeholder', '<'.S_VALUE.'>');
-			$span = new CSpan(RARR);
-			$span->addStyle('vertical-align:top;');
-
-			$macros_tbl->addRow(array(new CCheckBox(), $text1, $span, $text2));
-		}
-
-
-		$script = '$$("#tbl_macros input:checked").each(function(obj){ $(obj.parentNode.parentNode).remove(); if (typeof(deleted_macro_cnt) == \'undefined\') deleted_macro_cnt=1; else deleted_macro_cnt++; });';
-		$delete_btn = new CButton('macros_del', S_DELETE_SELECTED, $script);
-		$add_button = new CButton('macro_add', S_ADD, 'javascript: addMacroRow()');
-
-		$buttonRow = new CRow();
-		$buttonRow->setAttribute('id', 'row_new_macro');
-
-		$col = new CCol(array($add_button, SPACE, $delete_btn));
-		$col->setAttribute('colspan', 4);
-		$buttonRow->addItem($col);
-		$macros_tbl->addRow($buttonRow);
-
-		$footer = null;
-		if($hostid === null){
-//			$footer = array(new CSubmit('save', S_SAVE, "if (deleted_macro_cnt > 0) return confirm('".S_ARE_YOU_SURE_YOU_WANT_TO_DELETE." '+deleted_macro_cnt+' ".S_MACROS_ES."?');"));
-			$footer = new CRow(new CSubmit('save', S_SAVE, "if (deleted_macro_cnt > 0) return confirm('".S_ARE_YOU_SURE_YOU_WANT_TO_DELETE." '+deleted_macro_cnt+' ".S_MACROS_ES."?');"));
-			$macros_tbl->setFooter($footer);
-		}
-
-		//return new CFormElement(S_MACROS, $macros_tbl, $footer);
-		return $macros_tbl;
-	}
 ?>
